cli/tests/snapshot/snapshots/snapshot__export_stderr_field_path_syntax_error.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: unexpected token
  ┌─ <query>:1:7
  │
1 │ input.+foo.baz
  │       ^

note: when parsing a field path on the command line
 = A field path must be a dot-separated list of fields. Fields with spaces or special characters must be properly quoted.
 = For example: `config.database."$port"`


